parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSEIF

Grammar

Rule 0     S' -> ABSTRACT_STATEMENT
Rule 1     ABSTRACT_STATEMENT -> STATEMENT LINE_BREAK
Rule 2     ABSTRACT_STATEMENT -> ABSTRACT_STATEMENT ABSTRACT_STATEMENT
Rule 3     ABSTRACT_STATEMENT -> BRACE_OPEN ABSTRACT_STATEMENT BRACE_CLOSE
Rule 4     ABSTRACT_STATEMENT -> IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
Rule 5     ABSTRACT_STATEMENT -> IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT ELSE ABSTRACT_STATEMENT
Rule 6     ABSTRACT_STATEMENT -> WHILE BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
Rule 7     EXPRESSION -> SQUAREBRACKET_OPEN SHAPE_TYPE DESCRIPTION ATTRIBUTES SQUAREBRACKET_CLOSE
Rule 8     SHAPE_TYPE -> CIRCLE
Rule 9     SHAPE_TYPE -> TRIANGLE
Rule 10    SHAPE_TYPE -> RECTANGLE
Rule 11    COLOR_VALUE -> COLOR_HEX
Rule 12    COLOR_VALUE -> RED
Rule 13    COLOR_VALUE -> GREEN
Rule 14    COLOR_VALUE -> BLUE
Rule 15    COLOR_VALUE -> YELLOW
Rule 16    COLOR_VALUE -> BLACK
Rule 17    COLOR_VALUE -> WHITE
Rule 18    ATTRIBUTES -> ATTRIBUTE
Rule 19    ATTRIBUTES -> ATTRIBUTE SEPARATOR ATTRIBUTES
Rule 20    ATTRIBUTE -> RADIUS AFFECTATION EXPRESSION
Rule 21    ATTRIBUTE -> POSITIONX AFFECTATION EXPRESSION
Rule 22    ATTRIBUTE -> POSITIONY AFFECTATION EXPRESSION
Rule 23    ATTRIBUTE -> COLOR AFFECTATION COLOR_VALUE
Rule 24    ATTRIBUTE -> WIDTH AFFECTATION EXPRESSION
Rule 25    ATTRIBUTE -> HEIGHT AFFECTATION EXPRESSION
Rule 26    STATEMENT -> DRAW EXPRESSION
Rule 27    EXPRESSION -> VARIABLE_NAME
Rule 28    EXPRESSION -> INTEGER_MINUS EXPRESSION
Rule 29    EXPRESSION -> BOOL_NOT EXPRESSION
Rule 30    EXPRESSION -> EXPRESSION INTEGER_DIVIDE EXPRESSION
Rule 31    EXPRESSION -> EXPRESSION INTEGER_TIMES EXPRESSION
Rule 32    EXPRESSION -> EXPRESSION INTEGER_MINUS EXPRESSION
Rule 33    EXPRESSION -> EXPRESSION INTEGER_PLUS EXPRESSION
Rule 34    EXPRESSION -> EXPRESSION BOOL_EQUAL EXPRESSION
Rule 35    EXPRESSION -> EXPRESSION BOOL_NOT_EQUAL EXPRESSION
Rule 36    EXPRESSION -> EXPRESSION BOOL_AND EXPRESSION
Rule 37    EXPRESSION -> EXPRESSION BOOL_OR EXPRESSION
Rule 38    EXPRESSION -> EXPRESSION BOOL_LT EXPRESSION
Rule 39    EXPRESSION -> EXPRESSION BOOL_GT EXPRESSION
Rule 40    EXPRESSION -> BRACKET_OPEN EXPRESSION BRACKET_CLOSE
Rule 41    EXPRESSION -> NUMBER
Rule 42    EXPRESSION -> TRUE
Rule 43    EXPRESSION -> FALSE
Rule 44    STATEMENT -> BOOLEAN VARIABLE_NAME
Rule 45    STATEMENT -> INTEGER VARIABLE_NAME
Rule 46    STATEMENT -> SHAPE VARIABLE_NAME
Rule 47    STATEMENT -> VARIABLE_NAME AFFECTATION EXPRESSION
Rule 48    STATEMENT -> BOOLEAN VARIABLE_NAME AFFECTATION EXPRESSION
Rule 49    STATEMENT -> INTEGER VARIABLE_NAME AFFECTATION EXPRESSION
Rule 50    STATEMENT -> SHAPE VARIABLE_NAME AFFECTATION EXPRESSION
Rule 51    STATEMENT -> EXPRESSION

Terminals, with rules where they appear

AFFECTATION          : 20 21 22 23 24 25 47 48 49 50
BLACK                : 16
BLUE                 : 14
BOOLEAN              : 44 48
BOOL_AND             : 36
BOOL_EQUAL           : 34
BOOL_GT              : 39
BOOL_LT              : 38
BOOL_NOT             : 29
BOOL_NOT_EQUAL       : 35
BOOL_OR              : 37
BRACE_CLOSE          : 3
BRACE_OPEN           : 3
BRACKET_CLOSE        : 4 5 6 40
BRACKET_OPEN         : 4 5 6 40
CIRCLE               : 8
COLOR                : 23
COLOR_HEX            : 11
DESCRIPTION          : 7
DRAW                 : 26
ELSE                 : 5
ELSEIF               : 
FALSE                : 43
GREEN                : 13
HEIGHT               : 25
IF                   : 4 5
INTEGER              : 45 49
INTEGER_DIVIDE       : 30
INTEGER_MINUS        : 28 32
INTEGER_PLUS         : 33
INTEGER_TIMES        : 31
LINE_BREAK           : 1
NUMBER               : 41
POSITIONX            : 21
POSITIONY            : 22
RADIUS               : 20
RECTANGLE            : 10
RED                  : 12
SEPARATOR            : 19
SHAPE                : 46 50
SQUAREBRACKET_CLOSE  : 7
SQUAREBRACKET_OPEN   : 7
TRIANGLE             : 9
TRUE                 : 42
VARIABLE_NAME        : 27 44 45 46 47 48 49 50
WHILE                : 6
WHITE                : 17
WIDTH                : 24
YELLOW               : 15
error                : 

Nonterminals, with rules where they appear

ABSTRACT_STATEMENT   : 2 2 3 4 5 5 6 0
ATTRIBUTE            : 18 19
ATTRIBUTES           : 7 19
COLOR_VALUE          : 23
EXPRESSION           : 4 5 6 20 21 22 24 25 26 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 47 48 49 50 51
SHAPE_TYPE           : 7
STATEMENT            : 1

Parsing method: LALR

state 0

    (0) S' -> . ABSTRACT_STATEMENT
    (1) ABSTRACT_STATEMENT -> . STATEMENT LINE_BREAK
    (2) ABSTRACT_STATEMENT -> . ABSTRACT_STATEMENT ABSTRACT_STATEMENT
    (3) ABSTRACT_STATEMENT -> . BRACE_OPEN ABSTRACT_STATEMENT BRACE_CLOSE
    (4) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (5) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT ELSE ABSTRACT_STATEMENT
    (6) ABSTRACT_STATEMENT -> . WHILE BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (26) STATEMENT -> . DRAW EXPRESSION
    (44) STATEMENT -> . BOOLEAN VARIABLE_NAME
    (45) STATEMENT -> . INTEGER VARIABLE_NAME
    (46) STATEMENT -> . SHAPE VARIABLE_NAME
    (47) STATEMENT -> . VARIABLE_NAME AFFECTATION EXPRESSION
    (48) STATEMENT -> . BOOLEAN VARIABLE_NAME AFFECTATION EXPRESSION
    (49) STATEMENT -> . INTEGER VARIABLE_NAME AFFECTATION EXPRESSION
    (50) STATEMENT -> . SHAPE VARIABLE_NAME AFFECTATION EXPRESSION
    (51) STATEMENT -> . EXPRESSION
    (7) EXPRESSION -> . SQUAREBRACKET_OPEN SHAPE_TYPE DESCRIPTION ATTRIBUTES SQUAREBRACKET_CLOSE
    (27) EXPRESSION -> . VARIABLE_NAME
    (28) EXPRESSION -> . INTEGER_MINUS EXPRESSION
    (29) EXPRESSION -> . BOOL_NOT EXPRESSION
    (30) EXPRESSION -> . EXPRESSION INTEGER_DIVIDE EXPRESSION
    (31) EXPRESSION -> . EXPRESSION INTEGER_TIMES EXPRESSION
    (32) EXPRESSION -> . EXPRESSION INTEGER_MINUS EXPRESSION
    (33) EXPRESSION -> . EXPRESSION INTEGER_PLUS EXPRESSION
    (34) EXPRESSION -> . EXPRESSION BOOL_EQUAL EXPRESSION
    (35) EXPRESSION -> . EXPRESSION BOOL_NOT_EQUAL EXPRESSION
    (36) EXPRESSION -> . EXPRESSION BOOL_AND EXPRESSION
    (37) EXPRESSION -> . EXPRESSION BOOL_OR EXPRESSION
    (38) EXPRESSION -> . EXPRESSION BOOL_LT EXPRESSION
    (39) EXPRESSION -> . EXPRESSION BOOL_GT EXPRESSION
    (40) EXPRESSION -> . BRACKET_OPEN EXPRESSION BRACKET_CLOSE
    (41) EXPRESSION -> . NUMBER
    (42) EXPRESSION -> . TRUE
    (43) EXPRESSION -> . FALSE

    BRACE_OPEN      shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    DRAW            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 11
    SHAPE           shift and go to state 12
    VARIABLE_NAME   shift and go to state 10
    SQUAREBRACKET_OPEN shift and go to state 13
    INTEGER_MINUS   shift and go to state 14
    BOOL_NOT        shift and go to state 15
    BRACKET_OPEN    shift and go to state 5
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    ABSTRACT_STATEMENT             shift and go to state 1
    STATEMENT                      shift and go to state 2
    EXPRESSION                     shift and go to state 6

state 1

    (0) S' -> ABSTRACT_STATEMENT .
    (2) ABSTRACT_STATEMENT -> ABSTRACT_STATEMENT . ABSTRACT_STATEMENT
    (1) ABSTRACT_STATEMENT -> . STATEMENT LINE_BREAK
    (2) ABSTRACT_STATEMENT -> . ABSTRACT_STATEMENT ABSTRACT_STATEMENT
    (3) ABSTRACT_STATEMENT -> . BRACE_OPEN ABSTRACT_STATEMENT BRACE_CLOSE
    (4) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (5) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT ELSE ABSTRACT_STATEMENT
    (6) ABSTRACT_STATEMENT -> . WHILE BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (26) STATEMENT -> . DRAW EXPRESSION
    (44) STATEMENT -> . BOOLEAN VARIABLE_NAME
    (45) STATEMENT -> . INTEGER VARIABLE_NAME
    (46) STATEMENT -> . SHAPE VARIABLE_NAME
    (47) STATEMENT -> . VARIABLE_NAME AFFECTATION EXPRESSION
    (48) STATEMENT -> . BOOLEAN VARIABLE_NAME AFFECTATION EXPRESSION
    (49) STATEMENT -> . INTEGER VARIABLE_NAME AFFECTATION EXPRESSION
    (50) STATEMENT -> . SHAPE VARIABLE_NAME AFFECTATION EXPRESSION
    (51) STATEMENT -> . EXPRESSION
    (7) EXPRESSION -> . SQUAREBRACKET_OPEN SHAPE_TYPE DESCRIPTION ATTRIBUTES SQUAREBRACKET_CLOSE
    (27) EXPRESSION -> . VARIABLE_NAME
    (28) EXPRESSION -> . INTEGER_MINUS EXPRESSION
    (29) EXPRESSION -> . BOOL_NOT EXPRESSION
    (30) EXPRESSION -> . EXPRESSION INTEGER_DIVIDE EXPRESSION
    (31) EXPRESSION -> . EXPRESSION INTEGER_TIMES EXPRESSION
    (32) EXPRESSION -> . EXPRESSION INTEGER_MINUS EXPRESSION
    (33) EXPRESSION -> . EXPRESSION INTEGER_PLUS EXPRESSION
    (34) EXPRESSION -> . EXPRESSION BOOL_EQUAL EXPRESSION
    (35) EXPRESSION -> . EXPRESSION BOOL_NOT_EQUAL EXPRESSION
    (36) EXPRESSION -> . EXPRESSION BOOL_AND EXPRESSION
    (37) EXPRESSION -> . EXPRESSION BOOL_OR EXPRESSION
    (38) EXPRESSION -> . EXPRESSION BOOL_LT EXPRESSION
    (39) EXPRESSION -> . EXPRESSION BOOL_GT EXPRESSION
    (40) EXPRESSION -> . BRACKET_OPEN EXPRESSION BRACKET_CLOSE
    (41) EXPRESSION -> . NUMBER
    (42) EXPRESSION -> . TRUE
    (43) EXPRESSION -> . FALSE

    BRACE_OPEN      shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    DRAW            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 11
    SHAPE           shift and go to state 12
    VARIABLE_NAME   shift and go to state 10
    SQUAREBRACKET_OPEN shift and go to state 13
    INTEGER_MINUS   shift and go to state 14
    BOOL_NOT        shift and go to state 15
    BRACKET_OPEN    shift and go to state 5
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    ABSTRACT_STATEMENT             shift and go to state 19
    STATEMENT                      shift and go to state 2
    EXPRESSION                     shift and go to state 6

state 2

    (1) ABSTRACT_STATEMENT -> STATEMENT . LINE_BREAK

    LINE_BREAK      shift and go to state 20


state 3

    (3) ABSTRACT_STATEMENT -> BRACE_OPEN . ABSTRACT_STATEMENT BRACE_CLOSE
    (1) ABSTRACT_STATEMENT -> . STATEMENT LINE_BREAK
    (2) ABSTRACT_STATEMENT -> . ABSTRACT_STATEMENT ABSTRACT_STATEMENT
    (3) ABSTRACT_STATEMENT -> . BRACE_OPEN ABSTRACT_STATEMENT BRACE_CLOSE
    (4) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (5) ABSTRACT_STATEMENT -> . IF BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT ELSE ABSTRACT_STATEMENT
    (6) ABSTRACT_STATEMENT -> . WHILE BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (26) STATEMENT -> . DRAW EXPRESSION
    (44) STATEMENT -> . BOOLEAN VARIABLE_NAME
    (45) STATEMENT -> . INTEGER VARIABLE_NAME
    (46) STATEMENT -> . SHAPE VARIABLE_NAME
    (47) STATEMENT -> . VARIABLE_NAME AFFECTATION EXPRESSION
    (48) STATEMENT -> . BOOLEAN VARIABLE_NAME AFFECTATION EXPRESSION
    (49) STATEMENT -> . INTEGER VARIABLE_NAME AFFECTATION EXPRESSION
    (50) STATEMENT -> . SHAPE VARIABLE_NAME AFFECTATION EXPRESSION
    (51) STATEMENT -> . EXPRESSION
    (7) EXPRESSION -> . SQUAREBRACKET_OPEN SHAPE_TYPE DESCRIPTION ATTRIBUTES SQUAREBRACKET_CLOSE
    (27) EXPRESSION -> . VARIABLE_NAME
    (28) EXPRESSION -> . INTEGER_MINUS EXPRESSION
    (29) EXPRESSION -> . BOOL_NOT EXPRESSION
    (30) EXPRESSION -> . EXPRESSION INTEGER_DIVIDE EXPRESSION
    (31) EXPRESSION -> . EXPRESSION INTEGER_TIMES EXPRESSION
    (32) EXPRESSION -> . EXPRESSION INTEGER_MINUS EXPRESSION
    (33) EXPRESSION -> . EXPRESSION INTEGER_PLUS EXPRESSION
    (34) EXPRESSION -> . EXPRESSION BOOL_EQUAL EXPRESSION
    (35) EXPRESSION -> . EXPRESSION BOOL_NOT_EQUAL EXPRESSION
    (36) EXPRESSION -> . EXPRESSION BOOL_AND EXPRESSION
    (37) EXPRESSION -> . EXPRESSION BOOL_OR EXPRESSION
    (38) EXPRESSION -> . EXPRESSION BOOL_LT EXPRESSION
    (39) EXPRESSION -> . EXPRESSION BOOL_GT EXPRESSION
    (40) EXPRESSION -> . BRACKET_OPEN EXPRESSION BRACKET_CLOSE
    (41) EXPRESSION -> . NUMBER
    (42) EXPRESSION -> . TRUE
    (43) EXPRESSION -> . FALSE

    BRACE_OPEN      shift and go to state 3
    IF              shift and go to state 4
    WHILE           shift and go to state 7
    DRAW            shift and go to state 8
    BOOLEAN         shift and go to state 9
    INTEGER         shift and go to state 11
    SHAPE           shift and go to state 12
    VARIABLE_NAME   shift and go to state 10
    SQUAREBRACKET_OPEN shift and go to state 13
    INTEGER_MINUS   shift and go to state 14
    BOOL_NOT        shift and go to state 15
    BRACKET_OPEN    shift and go to state 5
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    ABSTRACT_STATEMENT             shift and go to state 21
    STATEMENT                      shift and go to state 2
    EXPRESSION                     shift and go to state 6

state 4

    (4) ABSTRACT_STATEMENT -> IF . BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT
    (5) ABSTRACT_STATEMENT -> IF . BRACKET_OPEN EXPRESSION BRACKET_CLOSE ABSTRACT_STATEMENT ELSE ABSTRACT_STATEMENT

    BRACKET_OPEN    shift and go to state 22


state 5

    (40) EXPRESSION -> BRACKET_OPEN . EXPRESSION BRACKET_CLOSE
    (7) EXPRESSION -> . SQUAREBRACKET_OPEN SHAPE_TYPE DESCRIPTION ATTRIBUTES SQUAREBRACKET_CLOSE
    (27) EXPRESSION -> . VARIABLE_NAME
    (28) EXPRESSION -> . INTEGER_MINUS EXPRESSION
    (29) EXPRESSION -> . BOOL_NOT EXPRESSION
    (30) EXPRESSION -> . EXPRESSION INTEGER_DIVIDE EXPRESSION
    (31) EXPRESSION -> . EXPRESSION INTEGER_TIMES EXPRESSION
    (32) EXPRESSION -> . EXPRESSION INTEGER_MINUS EXPRESSION
    (33) EXPRESSION -> . EXPRESSION INTEGER_PLUS EXPRESSION
    (34) EXPRESSION -> . EXPRESSION BOOL_EQUAL EXPRESSION
    (35) EXPRESSION -> . EXPRESSION BOOL_NOT_EQUAL EXPRESSION
    (36) EXPRESSION -> . EXPRESSION BOOL_AND EXPRESSION
    (37) EXPRESSION -> . EXPRESSION BOOL_OR EXPRESSION
    (38) EXPRESSION -> . EXPRESSION BOOL_LT EXPRESSION
    (39) EXPRESSION -> . EXPRESSION BOOL_GT EXPRESSION
    (40) EXPRESSION -> . BRACKET_OPEN EXPRESSION BRACKET_CLOSE
    (41) EXPRESSION -> . NUMBER
    (42) EXPRESSION -> . TRUE
    (43) EXPRESSION -> . FALSE

    SQUAREBRACKET_OPEN shift and go to state 13
    VARIABLE_NAME   shift and go to state 24
    INTEGER_MINUS   shift and go to state 14
    BOOL_NOT        shift and go to state 15
    BRACKET_OPEN    shift and go to state 5
    NUMBER          shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18

    EXPRESSION                     shift and go to state 23

state 6
